2001-06-25  Radek Doulik  <rodo@ximian.com>

	* htmlfontmanager.c (get_real_font_size): redone, now it's more
	similiar to mozilla font scaling

	* gtkhtml.c (gtk_html_set_magnification): don't allow sizes < 4

2001-06-23  Larry Ewing  <lewing@ximian.com>

	* htmltokenizer.c (add_byte): new function to sanitize invalid
	utf-8 strings.
	(in_plain): use add_byte.

2001-06-21  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c (forward_in_flow): new helper function
	(backward_in_flow): ditto
	(html_cursor_end_of_line): use forward_in_flow
	(html_cursor_beginning_of_line): use backward_in_flow

	* htmltable.c (calc_column_width_step): removed hopefully last
	forgoten substract by table->padding

2001-06-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_halign): helper function to parse halign
	values.
	(add_pending_paragraph_break): move this logic that is duplicated
	in several places into a function.
	(parse_table): use parse_halign, and add_pending_paragraph.
	(parse_a): small cleanups, add id logic.
	(parse_f): remove redundant NULL checks.
	(parse_s): ditto.
	(parse_h): use parse_halign.
	(parse_p): ditto.
	(parse_d): ditto.
	(parse_l): use add_pending_paragraph.
	(append_element): ditto.
	(parse_o): rework if statement.
	(parse_u): ditto.

2001-06-20  Radek Doulik  <rodo@ximian.com>

	* htmlcluev.c (find_free_area): uncomment loop break try_y ==
	next_y - not sure why it was commented out, I am going to
	investigate it more

	* gtkhtml.c (set_magnification): new helper function
	(gtk_html_set_magnification): make it work for pages with
	frames/iframes

2001-06-19  Radek Doulik  <rodo@ximian.com>

	* htmltablecell.c (calc_min_width): use parent method

	* htmltable.c (calc_column_width_step): don't add padding
	(html_table_set_cells_max_width): don't substract padding

	* htmlcluev.c (get_right_margin): substract 2 * padding
	(do_layout): fix for padding
	(calc_min_width): new method, takes care for padding
	(calc_preferred_width): ditto